--- a/recenzje.html
+++ b/recenzje.html
@@ -38,7 +38,7 @@ Czasami dorastać znaczy stanąć twarzą w twarz z prześladującymi cię demon
 <H2>2. <font color=red> Luis Montero Manglano MUZEUM LUSTER </font color=red></H2>
 
 <H4> Były horrory, nadszedł czas na thillery</h4>
-<IMG src="LUSTRO.jpg" HEIGHT=300 WIDTH=200 ALIGN="right">
+<IMG src="Lustro2.jpg" HEIGHT=300 WIDTH=200 ALIGN="right">
 <H4>RECENZJA</H4>
 <I>Muzeum luster</I> to fascynująca książka. Pisana przez znawcę sztuki, zawiera w sobie pełno opisów obrazów, budynków, malarzy, czy sztuki architektonicznej obecnej w danych czasach. O ile dla osób zainteresowanych tematem może wydawać się to niezwykle ciekawe, o tyle mnie najzwyczajniej w świecie nudziło. Nie oznacza to jednak, że thiller nie godny jest swojego miana. Wręcz przeciwnie! Książka porywa i przez dosyć długi czas nie może wyjść z głowy. Aby dobić się do "mięsa" trzeba najpierw przebić się przez pierwsze nudne rozdziały. Później jednak, czeka już tylko świetna fabuła. Ksiażka opowiada o sekcie i rytualnych mordach oraz znawcy symboli, zagubionym w świecie swojego umysłu i kopistce-amatorce, która przez przypadek została w to wciągnięta.<b> 8,5/10 </b>(na pewno na plus jest świetnie wykreowana postać Guillerma oraz cudna okładka i wnętrze książki).
 <h4> STRESZCZENIE</H4>
